run command - allow unnamed packages (#95)